--- a/src/WebAPPs/SPA/Blazor.WASM/Blazor.WASM.csproj
+++ b/src/WebAPPs/SPA/Blazor.WASM/Blazor.WASM.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -6,6 +6,16 @@
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
     <RootNamespace>HomeAPP.WebAPPs.SPA.Blazor.WASM</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Resources\de-DE.yml" />
+    <None Remove="Resources\en-US.yml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\de-DE.yml" />
+    <EmbeddedResource Include="Resources\en-US.yml" />
+  </ItemGroup>
 
   <ItemGroup>
 	<PackageReference Include="BlazorPro.BlazorSize" Version="2.*" />
@@ -20,6 +30,7 @@
 	<PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
 	<PackageReference Include="System.Text.Json" Version="5.0.0-preview.5.20278.1" />
     <PackageReference Include="System.Net.Http.Json" Version="3.2.0" />
+	<PackageReference Include="AKSoftware.Localization.MultiLanguages" Version="3.0.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,6 +40,14 @@
 
   <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+    <Folder Include="Pages\Blog\" />
+    <Folder Include="Pages\Account\" />
+    <Folder Include="Pages\Tender\" />
+    <Folder Include="Pages\Project\" />
   </ItemGroup>
 
 </Project>
