--- a/src/WebAPPs/SPA/Blazor.WASM/Resources/en-US.yml
+++ b/src/WebAPPs/SPA/Blazor.WASM/Resources/en-US.yml
@@ -1,8 +1,55 @@
-﻿BrandName: KriszW Software
-HomePage: Home
-OurProducts: Our products
-AboutUs: About us
-OurCompany: Our company
-Contacts: Contacts
-News: News
-Language: Language
+﻿GLOBAL_BRANDNAME: KriszW Software
+NavMenu_HomePage: Home
+NavMenu_Services: Services
+NavMenu_AboutUs: About us
+NavMenu_Contact: Contact
+NavMenu_Career: Career
+NavMenu_News: News
+NavMenu_ToogleButtonLabel: Toogle navigation
+Settings_Language: Language
+Homepage_Title: Unique software solutions, mobile and web apps, industrial software design solutions and Industry 4.0
+Homepage_OurCompanyNotWorkingWithOldTech: We do NOT work with old technologies what you have to rewrite after 2-3 years
+Homepage_OurCompanyMotto: We only work with the latest and best technologies, because that is what our clients deserve for their money.
+Contact_Title: Please contact us right now!
+Contact_WeWillContactYou: Would you work with us? It would be a pleasure for us! Please send your message and we will reply within 24 hours
+Contact_SendTender: You can send your tender here as well. It will speed up the process of getting your new project ready.
+Contact_ContactData_Title: Contact
+Contact_ContactData_Email: info@kwsoft.dev
+Contact_ContactData_Phone: +36309136248
+Contact_ContactData_LandLine: No landline yet
+Contact_ContactForm_SubmitLabel: Submit message
+ContactFooter_GoToContact: Contact us now
+ContactFooter_ImageAlt_GoToContact: Contact us now image
+ContactFooter_GoToContact_ButtonLabel: Contact us
+AboutUs_AboutUs: About us
+AboutUs_OurCompany: Our company
+AboutUs_ImageAlt_OurCompany: Image of our company
+AboutUs_OurCompany_Paragraph: Azért alapítottuk ezt a céget, mert mi az ügyfeleinknek a legjobbat akarjuk. A cégünk a legfrisebb és a próblémához legjobban fekvő technológiákat használjuk, hiszen ezt érdemli mindenki aki egy szoftvert vásárol. A fő célünk ezzel, hogy az ügyfeleink kiemelkedjenek a piacon és így az innováció és a fejlődést jelképezzék ezzel a versenyképpeségüket növelve.
+AboutUs_WhyChooseUs: Why you should choose us
+AboutUs_WhyChooseUs_Paragraph: Mi azt tartjuk szemelőtt, hogy te mit szeretnél. Segítűnk elkészíteni, kitalálni és tökéletesíteni az ötletedet. Úgy építettük fel a rendszert amivel dolgozunk, hogy a vevőt azaz téged tartunk szemelőtt, így az lesz az ötletedből amit te szeretnél. A másik fontos pontunk az volt hogy nem szeretnénk téged megvárakoztatni. A lehető leggyorsabban a kezedbe adunk egy rendszert amit már tudsz használni, és utána még azt fejleszzük tovább így akár már 2 hónapon belűl is használhatod azt amit megrendeltél. Ezt segíti az, hogy a szakmában a legjobbak közül választottunk és úgy választjuk ki a technológákat, hogy a te ötletedhez alkalmazkodjon.
+AboutUs_ImageAlt_WhyChooseUs: Why you should choose us
+AboutUs_HowWeWork: How we create your dream
+AboutUs_HowWeWork_Paragraph: bbbb
+AboutUs_ImageAlt_HowWeWork: Image of how we work
+AboutUs_WhatWeWorkWith: With what we develop your dream
+AboutUs_WhatWeWorkWith_Paragraph: ccccc
+AboutUs_ImageAlt_WhatWeWorkWith: Image of what we work with
+Services_TextOverImage_Text: Text over image
+Services_ImageAlt_TextOverImage: Placeholder 1000x300
+Services_ServiceCards_Card1_Title: Unique software development
+Services_ServiceCards_Card1_Content: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+Services_ServiceCards_Card2_Title: Web development
+Services_ServiceCards_Card2_Content: Aliquam tristique velit quis lacus sollicitudin, porta rutrum neque semper. 
+Services_ServiceCards_Card3_Title: Mobile development
+Services_ServiceCards_Card3_Content: Suspendisse commodo dapibus velit sit amet mollis. Cras a arcu non erat varius suscipit a a nisi. Duis quis lobortis nibh.
+Services_ServiceCards_Card4_Title: Industry 4.0
+Services_ServiceCards_Card4_Content: In elementum ullamcorper arcu, non sodales leo luctus nec. Duis sed mattis est. Duis accumsan a mauris et interdum. Pellentesque bibendum interdum turpis eget scelerisque. 
+Services_ServiceCards_Card5_Title: UX development
+Services_ServiceCards_Card5_Content: Duis sed blandit dolor, vitae commodo ante. Vivamus rhoncus ac eros ac dictum. Integer blandit nunc sit amet ullamcorper tristique.
+Services_ServiceCards_Card6_Title: AI development
+Services_ServiceCards_Card6_Content: Phasellus arcu mi, feugiat eget ultrices nec, ullamcorper in justo. Nunc varius rhoncus diam sit amet euismod. Maecenas non urna feugiat, auctor est vel, pellentesque ipsum
+Services_ServiceCards_Card7_Title: Data Architecture development
+Services_ServiceCards_Card7_Content: Sed tellus mi, fermentum nec hendrerit ac, dictum eu lacus. Proin vitae magna ac urna tempus laoreet. Aenean turpis urna, sollicitudin eu urna non, tristique molestie orci. Fusce finibus odio non ante finibus semper. Etiam gravida aliquam sem id suscipit. In et est at dui lobortis tincidunt.
+Services_ServiceCards_Card8_Title: Technologies we use
+Services_ServiceCards_Card8_Content: Nam velit magna, sodales sit amet tempor lacinia, tempus at erat. Nunc volutpat odio sit amet varius volutpat. Nullam ornare metus pellentesque enim vulputate, et congue sem semper.
+ServiceCardComponenet_CardAction_NavTo_Label: Know more
