--- a/src/WebAPPs/SPA/Blazor.WASM/Blazor.WASM.csproj
+++ b/src/WebAPPs/SPA/Blazor.WASM/Blazor.WASM.csproj
@@ -5,31 +5,34 @@
     <RazorLangVersion>3.0</RazorLangVersion>
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
     <RootNamespace>HomeAPP.WebAPPs.SPA.Blazor.WASM</RootNamespace>
+    <AssemblyName>HomeAPP.WebAPPs.SPA.Blazor.WASM</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="Resources\de-DE.yml" />
     <None Remove="Resources\en-US.yml" />
+    <None Remove="Resources\hu-HU.yml" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Resources\de-DE.yml" />
     <EmbeddedResource Include="Resources\en-US.yml" />
+    <EmbeddedResource Include="Resources\hu-HU.yml" />
   </ItemGroup>
 
   <ItemGroup>
-	<PackageReference Include="BlazorPro.BlazorSize" Version="2.*" />
 	<PackageReference Include="Blazor.Extensions.Storage" Version="1.1.0-preview3" />
-	<PackageReference Include="Fluxor.Blazor.Web" Version="3.1.1" />
-	<PackageReference Include="Fluxor.Blazor.Web.ReduxDevTools" Version="3.1.1" />
-	<PackageReference Include="MatBlazor" Version="2.4.3" />
+	<PackageReference Include="BlazorPro.Spinkit" Version="1.2.0" />
+	<PackageReference Include="Fluxor.Blazor.Web" Version="3.2.0" />
+	<PackageReference Include="Fluxor.Blazor.Web.ReduxDevTools" Version="3.2.0" />
+	<PackageReference Include="MatBlazor" Version="2.6.2" />
 	<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.0-preview.3.20215.14" />
-	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.0" />
-	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.0" PrivateAssets="all" />
-	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.0" PrivateAssets="all" />
+	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.1" />
+	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.1" PrivateAssets="all" />
+	<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.1" PrivateAssets="all" />
 	<PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
 	<PackageReference Include="System.Text.Json" Version="5.0.0-preview.5.20278.1" />
-    <PackageReference Include="System.Net.Http.Json" Version="3.2.0" />
+    <PackageReference Include="System.Net.Http.Json" Version="3.2.1" />
 	<PackageReference Include="AKSoftware.Localization.MultiLanguages" Version="3.0.1" />
   </ItemGroup>
 
@@ -43,11 +46,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Extensions\" />
-    <Folder Include="Pages\Blog\" />
     <Folder Include="Pages\Account\" />
-    <Folder Include="Pages\Tender\" />
     <Folder Include="Pages\Project\" />
+    <Folder Include="Services\Services\Abstractions\" />
+    <Folder Include="Services\Services\Implementations\" />
+    <Folder Include="Utilities\ServerValidation\" />
   </ItemGroup>
 
 </Project>
