--- a/src/WebAPPs/SPA/Blazor.WASM/Blazor.WASM.csproj
+++ b/src/WebAPPs/SPA/Blazor.WASM/Blazor.WASM.csproj
@@ -37,9 +37,23 @@
   <ItemGroup>
     <Folder Include="Pages\Account\" />
     <Folder Include="Pages\Project\" />
-    <Folder Include="Resources\" />
-    <Folder Include="Services\Services\Implementations\" />
+    <Folder Include="Resources\Pages\Account\" />
+    <Folder Include="Resources\Pages\Project\" />
+    <Folder Include="Resources\Shared\ErrorPages\" />
+    <Folder Include="Resources\Shared\Components\" />
+    <Folder Include="Resources\Shared\Layouts\" />
+    <Folder Include="Resources\Shared\NavMenu\" />
+    <Folder Include="Resources\Shared\Settings\" />
     <Folder Include="Utilities\ServerValidation\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\Shared\Footer\Footer.de.resx">
+      <Generator></Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Resources\Shared\Footer\Footer.en.resx">
+      <Generator></Generator>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
