--- a/src/Services/Tender/Tender.API/Tender.API.csproj
+++ b/src/Services/Tender/Tender.API/Tender.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -9,6 +9,13 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="Models\" />
+    <Folder Include="Services\Repositories\Abstractions\" />
+    <Folder Include="Services\Repositories\Implementations\" />
+    <Folder Include="Services\Services\Abstractions\" />
+    <Folder Include="Services\Services\Implementations\" />
+    <Folder Include="Validators\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
 
   <ItemGroup>
